--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Snake Game</title>
-        <link rel="stylesheet" href="index.css" />
+        <style></style>
     </head>
     <body>
         <div class="game-container">
@@ -94,6 +94,6 @@
             </div>
         </div>
 
-        <script src="index.js"></script>
+        <script></script>
     </body>
 </html>
