SEO changes & Favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Snake Game</title>
+
+        <link rel="icon" type="image/png" href="./favcion.png" />
+
+        <meta charset="UTF-8" />
+        <meta
+            name="description"
+            content="Play the classic Snake Game online! Enjoy a fun, addictive, and challenging snake game built with pure HTML, CSS, and JavaScript. No downloads, no ads, just pure gaming fun."
+        />
+        <meta
+            name="keywords"
+            content="snake game, online snake, classic snake, HTML5 game, JavaScript game, browser game, play snake, retro game, arcade game, free snake game"
+        />
+        <meta name="author" content="SMXTREME" />
+
+        <meta property="og:title" content="Snake Game" />
+        <meta
+            property="og:description"
+            content="A classic Snake Game built with HTML, CSS, and JavaScript — no libraries, no frameworks, just pure front-end fun!"
+        />
+        <meta property="og:image" content="https://snake-game.shubhammaloo.xyz/favcion.png" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://snake-game.shubhammaloo.xyz" />
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Snake Game" />
+        <meta
+            name="twitter:description"
+            content="A classic Snake Game built with HTML, CSS, and JavaScript — no libraries, no frameworks, just pure front-end fun!"
+        />
+        <meta name="twitter:image" content="https://snake-game.shubhammaloo.xyz/favcion.png" />
+
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
